# dx-codeanalysis-scripts

./: .gitignore  pyproject.toml  ruff.toml
src/: 02_evaluate_language_data.py
src/evaluation/: __init__.py  evaluation_language_data.py
src/model/: __init__.py  configType.py  evaluation_types.py  filter_types.py  repository_meta_data.py
src/utility/: git_service.py  github_service.py  threading_service.py  utils.py
